ci: update melos to v3 for Firestore and ODM (#10555)
* ci: update melos to v3

* ci: update melos to v3

--- a/.github/workflows/all_plugins.yaml
+++ b/.github/workflows/all_plugins.yaml
@@ -157,5 +157,6 @@ jobs:
           # Running `melos bootstrap` is not needed because we use Melos just
           # for the `check-license-header` script.
           run-bootstrap: false
+          melos-version: '3.0.0-dev.0'
       - name: Check license header
         run: melos run check-license-header
