feat(ui_shared): extract common widgets to a shared library (#10620)
* feat(ui_shared): ThemedColor added

* add more widgets

* drop comments from pubspec

* more tests

* release preparations

* more API docs

* lower sdk constraint to match everything else

--- a/packages/firebase_ui_auth/example/pubspec.yaml
+++ b/packages/firebase_ui_auth/example/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_ui_oauth_twitter: ^1.0.24
 dev_dependencies:
   drive: ^1.0.0-1.0.nullsafety.1
+  firebase_ui_shared: ^1.0.0
   flutter_facebook_auth: ^4.4.1
   flutter_driver:
     sdk: flutter
