--- a/packages/firebase_ui_auth/pubspec_overrides.yaml
+++ b/packages/firebase_ui_auth/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: _flutterfire_internals,firebase_auth,firebase_auth_platform_interface,firebase_auth_web,firebase_core,firebase_core_platform_interface,firebase_core_web,firebase_dynamic_links,firebase_dynamic_links_platform_interface,firebase_ui_localizations,firebase_ui_oauth
+# melos_managed_dependency_overrides: _flutterfire_internals,firebase_auth,firebase_auth_platform_interface,firebase_auth_web,firebase_core,firebase_core_platform_interface,firebase_core_web,firebase_dynamic_links,firebase_dynamic_links_platform_interface,firebase_ui_localizations,firebase_ui_oauth,firebase_ui_shared
 dependency_overrides:
   intl: ^0.18.0
   _flutterfire_internals:
@@ -23,3 +23,5 @@ dependency_overrides:
     path: ../firebase_ui_localizations
   firebase_ui_oauth:
     path: ../firebase_ui_oauth
+  firebase_ui_shared:
+    path: ../firebase_ui_shared
