--- a/packages/firebase_ui_oauth/pubspec.yaml
+++ b/packages/firebase_ui_oauth/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   desktop_webview_auth: ^0.0.11
   firebase_auth: ^4.3.0
   firebase_ui_auth: ^1.1.17
+  firebase_ui_shared: ^1.0.0
   flutter_svg: ^1.1.2
   flutter:
     sdk: flutter
