--- a/packages/firebase_app_check/firebase_app_check_platform_interface/pubspec.yaml
+++ b/packages/firebase_app_check/firebase_app_check_platform_interface/pubspec.yaml
@@ -4,8 +4,8 @@ homepage: https://github.com/firebase/flutterfire/tree/master/packages/firebase_
 version: 0.0.5+17
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.20.0'
 
 dependencies:
   _flutterfire_internals: ^1.0.18
