--- a/packages/firebase_app_installations/firebase_app_installations_platform_interface/pubspec.yaml
+++ b/packages/firebase_app_installations/firebase_app_installations_platform_interface/pubspec.yaml
@@ -5,8 +5,8 @@ homepage: https://github.com/firebase/flutterfire/tree/master/packages/firebase_
 repository: https://github.com/firebase/flutterfire/tree/master/packages/firebase_app_installations/firebase_app_installations_platform_interface
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.17.0'
 
 dependencies:
   _flutterfire_internals: ^1.0.18
