--- a/packages/firebase_database/firebase_database/pubspec.yaml
+++ b/packages/firebase_database/firebase_database/pubspec.yaml
@@ -6,11 +6,11 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/firebas
 version: 10.0.16
 
 false_secrets:
- - example/**
+  - example/**
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.5"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.12.13+hotfix.5'
 
 dependencies:
   firebase_core: ^2.8.0
