--- a/packages/firebase_dynamic_links/firebase_dynamic_links/example/pubspec.yaml
+++ b/packages/firebase_dynamic_links/firebase_dynamic_links/example/pubspec.yaml
@@ -2,8 +2,8 @@ name: firebase_dynamic_links_example
 description: Demonstrates how to use the firebase_dynamic_links plugin.
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.12.0"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.12.0'
 
 dependencies:
   firebase_core: ^2.8.0
