--- a/packages/firebase_in_app_messaging/firebase_in_app_messaging/example/pubspec.yaml
+++ b/packages/firebase_in_app_messaging/firebase_in_app_messaging/example/pubspec.yaml
@@ -1,9 +1,9 @@
 name: firebase_in_app_messaging_example
 description: Demonstrates how to use the firebase_in_app_messaging plugin.
-publish_to: "none"
+publish_to: 'none'
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
   cupertino_icons: ^1.0.2
