--- a/packages/firebase_performance/firebase_performance_platform_interface/pubspec.yaml
+++ b/packages/firebase_performance/firebase_performance_platform_interface/pubspec.yaml
@@ -1,11 +1,11 @@
 name: firebase_performance_platform_interface
-description:  A common platform interface for the firebase_performance plugin.
+description: A common platform interface for the firebase_performance plugin.
 version: 0.1.1+35
 homepage: https://firebase.flutter.dev/docs/performance/overview
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.17.0'
 
 dependencies:
   _flutterfire_internals: ^1.0.18
