--- a/packages/firebase_remote_config/firebase_remote_config_web/pubspec.yaml
+++ b/packages/firebase_remote_config/firebase_remote_config_web/pubspec.yaml
@@ -6,8 +6,8 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/firebas
 version: 1.1.24
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.20.0'
 
 dependencies:
   firebase_core: ^2.8.0
