--- a/packages/firebase_storage/firebase_storage_platform_interface/pubspec.yaml
+++ b/packages/firebase_storage/firebase_storage_platform_interface/pubspec.yaml
@@ -4,8 +4,8 @@ version: 4.1.32
 homepage: https://github.com/firebase/flutterfire/tree/master/packages/firebase_storage/firebase_storage_platform_interface
 repository: https://github.com/firebase/flutterfire/tree/master/packages/firebase_storage/firebase_storage_platform_interface
 environment:
-  sdk: '>=2.16.0 <3.0.0'
-  flutter: ">=1.9.1+hotfix.5"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.9.1+hotfix.5'
 
 dependencies:
   collection: ^1.15.0
