--- a/tests/pubspec.yaml
+++ b/tests/pubspec.yaml
@@ -1,11 +1,11 @@
 # ignore_for_file sort_pub_dependencies
 name: tests
 description: A an app for FlutterFire testing (e2e).
-publish_to: "none"
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
   cloud_functions: ^4.0.13
