--- a/packages/cloud_firestore/cloud_firestore_web/pubspec.yaml
+++ b/packages/cloud_firestore/cloud_firestore_web/pubspec.yaml
@@ -6,8 +6,8 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/cloud_f
 version: 3.3.5
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.20.0'
 
 dependencies:
   _flutterfire_internals: ^1.0.18
