--- a/packages/cloud_firestore_odm/cloud_firestore_odm/pubspec.yaml
+++ b/packages/cloud_firestore_odm/cloud_firestore_odm/pubspec.yaml
@@ -8,7 +8,7 @@ false_secrets:
   - example/**
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
   cloud_firestore: ^4.4.5
