--- a/packages/cloud_firestore_odm/cloud_firestore_odm_generator/cloud_firestore_odm_generator_integration_test/pubspec.yaml
+++ b/packages/cloud_firestore_odm/cloud_firestore_odm_generator/cloud_firestore_odm_generator_integration_test/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.0-dev.1
 publish_to: none
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
   cloud_firestore: ^4.4.5
@@ -20,7 +20,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.0.0
-  json_serializable: ">=6.3.0 <7.0.0"
+  json_serializable: '>=6.3.0 <7.0.0'
 
 flutter:
   uses-material-design: false
