--- a/packages/cloud_firestore_odm/cloud_firestore_odm_generator/pubspec.yaml
+++ b/packages/cloud_firestore_odm/cloud_firestore_odm_generator/pubspec.yaml
@@ -5,15 +5,15 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/cloud_f
 version: 1.0.0-dev.52
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
-  analyzer: ">=5.4.0 <6.0.0"
+  analyzer: '>=5.4.0 <6.0.0'
   build: ^2.0.1
   build_config: ^1.0.0
   cloud_firestore_odm: ^1.0.0-dev.52
   collection: ^1.15.0
-  freezed_annotation: ">=1.0.0 <3.0.0"
+  freezed_annotation: '>=1.0.0 <3.0.0'
   json_annotation: ^4.6.0
   meta: ^1.3.0
   recase: ^4.0.0
@@ -22,6 +22,6 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.0.0
   expect_error: ^1.0.5
-  json_serializable: ">=6.3.0 <7.0.0"
+  json_serializable: '>=6.3.0 <7.0.0'
   matcher: ^0.12.10
   test: ^1.16.8
