--- a/packages/cloud_functions/cloud_functions_platform_interface/pubspec.yaml
+++ b/packages/cloud_functions/cloud_functions_platform_interface/pubspec.yaml
@@ -8,8 +8,8 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/cloud_f
 version: 5.1.32
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.9.1+hotfix.5"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.9.1+hotfix.5'
 
 dependencies:
   firebase_core: ^2.8.0
@@ -23,4 +23,3 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.0
-
