--- a/packages/cloud_functions/cloud_functions_web/pubspec.yaml
+++ b/packages/cloud_functions/cloud_functions_web/pubspec.yaml
@@ -6,8 +6,8 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/cloud_f
 version: 4.3.21
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.20.0'
 
 dependencies:
   cloud_functions_platform_interface: ^5.1.32
