--- a/packages/firebase_dynamic_links/firebase_dynamic_links_platform_interface/pubspec.yaml
+++ b/packages/firebase_dynamic_links/firebase_dynamic_links_platform_interface/pubspec.yaml
@@ -5,8 +5,8 @@ homepage: https://github.com/firebase/flutterfire/tree/master/packages/firebase_
 repository: https://github.com/firebase/flutterfire/tree/master/packages/firebase_dynamic_links/firebase_dynamic_links_platform_interface
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.9.1+hotfix.5"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.9.1+hotfix.5'
 
 dependencies:
   _flutterfire_internals: ^1.0.18
@@ -15,7 +15,6 @@ dependencies:
     sdk: flutter
   meta: ^1.3.0
   plugin_platform_interface: ^2.1.3
-
 
 dev_dependencies:
   firebase_core_platform_interface: ^4.5.3
