--- a/packages/firebase_in_app_messaging/firebase_in_app_messaging_platform_interface/pubspec.yaml
+++ b/packages/firebase_in_app_messaging/firebase_in_app_messaging_platform_interface/pubspec.yaml
@@ -6,8 +6,8 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/firebas
 version: 0.2.1+35
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
-  flutter: ">=1.9.1+hotfix.5"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.9.1+hotfix.5'
 
 dependencies:
   _flutterfire_internals: ^1.0.18
