--- a/packages/firebase_ml_model_downloader/firebase_ml_model_downloader/example/pubspec.yaml
+++ b/packages/firebase_ml_model_downloader/firebase_ml_model_downloader/example/pubspec.yaml
@@ -3,10 +3,10 @@ description: Demonstrates how to use the firebase_ml_model_downloader plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=2.18.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
