--- a/packages/firebase_performance/firebase_performance/example/pubspec.yaml
+++ b/packages/firebase_performance/firebase_performance/example/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
   firebase_core: ^2.8.0
