fix: allow to unlink providers only in edit mode (#10649)
Co-authored-by: Russell Wheatley <russellwheatley85@gmail.com>

--- a/packages/firebase_ui_database/example/pubspec.yaml
+++ b/packages/firebase_ui_database/example/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   firebase_core: ^2.9.0
   firebase_database: ^10.1.0
 dev_dependencies:
-  drive: ^0.1.0
+  drive: ^1.0.0-1.0.nullsafety.1
   flutter_test:
     sdk: flutter
   integration_test:
