--- a/packages/firebase_app_check/firebase_app_check/pubspec.yaml
+++ b/packages/firebase_app_check/firebase_app_check/pubspec.yaml
@@ -2,7 +2,7 @@ name: firebase_app_check
 description: App Check works alongside other Firebase services to help protect your backend resources from abuse, such as billing fraud or phishing.
 homepage: https://firebase.google.com/docs/app-check
 repository: https://github.com/firebase/flutterfire/tree/master/packages/firebase_app_check/firebase_app_check
-version: 0.1.2
+version: 0.1.2+1
 
 false_secrets:
   - example/**
