--- a/tests/pubspec.yaml
+++ b/tests/pubspec.yaml
@@ -15,15 +15,15 @@ dependencies:
   firebase_analytics: ^10.2.0
   firebase_analytics_platform_interface: ^3.4.0
   firebase_analytics_web: ^0.5.2
-  firebase_app_check: ^0.1.2
+  firebase_app_check: ^0.1.2+1
   firebase_app_check_platform_interface: ^0.0.6
   firebase_app_check_web: ^0.0.8
   firebase_app_installations: ^0.2.2
   firebase_app_installations_platform_interface: ^0.1.2
   firebase_app_installations_web: ^0.1.2
-  firebase_auth: ^4.4.0
+  firebase_auth: ^4.4.1
   firebase_auth_platform_interface: ^6.13.0
-  firebase_auth_web: ^5.3.0
+  firebase_auth_web: ^5.3.1
   firebase_core: ^2.9.0
   firebase_core_platform_interface: ^4.6.0
   firebase_core_web: ^2.3.0
