chore(ui_storage): add false_secrets rule (#10792)

--- a/packages/firebase_ui_storage/pubspec.yaml
+++ b/packages/firebase_ui_storage/pubspec.yaml
@@ -7,6 +7,9 @@ environment:
   sdk: '>=2.19.5 <3.0.0'
   flutter: '>=1.17.0'
 
+false_secrets:
+  - example/**
+
 dependencies:
   flutter:
     sdk: flutter
