--- a/packages/firebase_ui_storage/pubspec.yaml
+++ b/packages/firebase_ui_storage/pubspec.yaml
@@ -1,5 +1,5 @@
 name: firebase_ui_storage
-description: A new Flutter package project.
+description: Pre-built widgets and utilites that make it easy to integrate Firebase Storage into your Flutter app.
 version: 0.1.0-dev.1
 homepage: https://github.com/firebase/flutterfire/tree/master/packages/firebase_ui_storage/
 
