--- a/.github/workflows/firebase_firestore_odm.yaml
+++ b/.github/workflows/firebase_firestore_odm.yaml
@@ -24,7 +24,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3
         with:
@@ -36,7 +36,7 @@ jobs:
       - uses: bluefireteam/melos-action@dd3c344d731938d2ab2567a261f54a19a68b5f6a
         with:
           run-bootstrap: false
-          melos-version: '3.0.0-dev.0'
+          melos-version: '3.0.1'
       - name: "Bootstrap Workspace"
         run: |
           melos bootstrap --scope="*firebase_core*" --scope="$FLUTTERFIRE_PLUGIN_SCOPE"
@@ -54,6 +54,10 @@ jobs:
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3
         with:
           fetch-depth: 0
+      - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c
+        name: Install Node.js 16
+        with:
+          node-version: "16"
       - uses: actions/setup-java@3f07048e3d294f56e9b90ac5ea2c6f74e9ad0f98
         with:
           distribution: 'temurin'
@@ -65,7 +69,7 @@ jobs:
       - uses: bluefireteam/melos-action@dd3c344d731938d2ab2567a261f54a19a68b5f6a
         with:
           run-bootstrap: false
-          melos-version: '3.0.0-dev.0'
+          melos-version: '3.0.1'
       - name: "Install Tools"
         run: |
           sudo npm i -g firebase-tools
@@ -76,5 +80,16 @@ jobs:
           melos run odm:generator_test_build_runner:build
       - name: Start Firebase Emulator
         run: cd ./.github/workflows/scripts && ./start-firebase-emulator.sh
-      - name: "Drive Example"
-        run: ./.github/workflows/scripts/drive-example.sh web
+      - name: "E2E Tests"
+        working-directory: packages/cloud_firestore_odm/cloud_firestore_odm/example
+        # Web devices are not supported for the `flutter test` command yet. As a
+        # workaround we can use the `flutter drive` command. Tracking issue:
+        # https://github.com/flutter/flutter/issues/66264
+        run: |
+          chromedriver --port=4444 &
+          flutter drive \
+            --verbose-system-logs \
+            -d web-server \
+            --driver=test_driver/integration_test.dart \
+            --target=integration_test/cloud_firestore_odm_e2e_test.dart \
+            --dart-define=CI=true
