feat: upgrade to dart 3 compatible dependencies (#10890)
* ci: check if compatible with dart 3

* ci: check if compatible with dart 3

* feat: upgrade deprecated setMockMethodCallHandler

* feat: remove deprecated code

* feat: remove deprecated code

* feat: remove deprecated code

* feat: remove deprecated code

* feat: update ODM to support new fields

* feat: update web tests

* feat: update web tests

* feat: go back to stable channel

* feat: downgrade meta to be compatible with 2.19 and 3.0

* feat: add optionnal access to defaultBinaryMessenger

* feat: fix some compatibility issues with dart 2.19 in tests

* feat: fix some compatibility issues with dart 2.19 in tests

--- a/packages/firebase_remote_config/firebase_remote_config_web/pubspec.yaml
+++ b/packages/firebase_remote_config/firebase_remote_config_web/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   js: ^0.6.3
 
 dev_dependencies:
+  build_runner: ^2.3.3
   firebase_core_platform_interface: ^4.6.0
   flutter_test:
     sdk: flutter
