--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -7,22 +7,22 @@ concurrency:
 on:
   pull_request:
     paths-ignore:
-      - "docs/**"
-      - "website/**"
-      - "**/example/**"
-      - "**/flutterfire_ui/**"
-      - "**/cloud_firestore_odm/**"
-      - "**.md"
+      - 'docs/**'
+      - 'website/**'
+      - '**/example/**'
+      - '**/flutterfire_ui/**'
+      - '**/cloud_firestore_odm/**'
+      - '**.md'
   push:
     branches:
       - master
     paths-ignore:
-      - "docs/**"
-      - "website/**"
-      - "**/example/**"
-      - "**/flutterfire_ui/**"
-      - "**/cloud_firestore_odm/**"
-      - "**.md"
+      - 'docs/**'
+      - 'website/**'
+      - '**/example/**'
+      - '**/flutterfire_ui/**'
+      - '**/cloud_firestore_odm/**'
+      - '**.md'
 
 jobs:
   android:
@@ -30,17 +30,18 @@ jobs:
     timeout-minutes: 45
     strategy:
       matrix:
-        working_directory: ['tests', 'packages/cloud_firestore/cloud_firestore/example']
+        working_directory:
+          ['tests', 'packages/cloud_firestore/cloud_firestore/example']
     steps:
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3
       - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c
         name: Install Node.js 16
         with:
-          node-version: "16"
+          node-version: '16'
       - uses: actions/setup-java@3f07048e3d294f56e9b90ac5ea2c6f74e9ad0f98
         with:
-          distribution: "temurin"
-          java-version: "11"
+          distribution: 'temurin'
+          java-version: '11'
       - uses: actions/cache@69d9d449aced6a2ede0bc19182fadc3a0a42d2b0
         name: Gradle Cache
         with:
@@ -69,9 +70,9 @@ jobs:
         with:
           run-bootstrap: false
           melos-version: '3.0.1'
-      - name: "Bootstrap package"
+      - name: 'Bootstrap package'
         run: melos bootstrap --scope tests
-      - name: "Install Tools"
+      - name: 'Install Tools'
         run: |
           sudo npm i -g firebase-tools
       - name: Start Firebase Emulator
@@ -81,37 +82,38 @@ jobs:
         run: |
           echo "List installed packages"
           $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --list_installed
-          
+
           echo "Installing system image"
           echo "y" | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "system-images;android-33;google_apis;x86_64"
-          
+
           echo "Creating AVD"
           echo "no" | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/avdmanager create avd -n test_emulator -k "system-images;android-33;google_apis;x86_64" --force
 
           echo "Starting emulator"
           $ANDROID_SDK_ROOT/emulator/emulator -avd test_emulator -no-audio -no-boot-anim -no-window &
           adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done; input keyevent 82'
-      - name: "E2E Tests"
+      - name: 'E2E Tests'
         working-directory: ${{ matrix.working_directory }}
         run: |
-          flutter test integration_test/e2e_test.dart --dart-define=CI=true      
+          flutter test integration_test/e2e_test.dart --dart-define=CI=true
 
   ios:
     runs-on: macos-13
     timeout-minutes: 45
     strategy:
       matrix:
-        working_directory: ['tests', 'packages/cloud_firestore/cloud_firestore/example']
+        working_directory:
+          ['tests', 'packages/cloud_firestore/cloud_firestore/example']
     steps:
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3
       - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c
         name: Install Node.js 16
         with:
-          node-version: "16"
+          node-version: '16'
       - uses: actions/setup-java@3f07048e3d294f56e9b90ac5ea2c6f74e9ad0f98
         with:
-          distribution: "temurin"
-          java-version: "11"
+          distribution: 'temurin'
+          java-version: '11'
       - uses: hendrikmuhs/ccache-action@fba817f3c0db4f854d7a3ee688241d6754da166e
         name: Xcode Compile Cache
         with:
@@ -138,12 +140,12 @@ jobs:
         with:
           run-bootstrap: false
           melos-version: '3.0.1'
-      - name: "Bootstrap package"
+      - name: 'Bootstrap package'
         run: melos bootstrap --scope tests
-      - name: "Install Tools"
+      - name: 'Install Tools'
         run: |
           sudo npm i -g firebase-tools
-      - name: "Build Application"
+      - name: 'Build Application'
         working-directory: ${{ matrix.working_directory }}
         run: |
           export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH"
@@ -156,7 +158,7 @@ jobs:
           ccache -s
       - name: Start Firebase Emulator
         run: cd ./.github/workflows/scripts && ./start-firebase-emulator.sh
-      - name: "E2E Tests"
+      - name: 'E2E Tests'
         working-directory: ${{ matrix.working_directory }}
         run: |
           # Boot simulator and wait for System app to be ready.
@@ -178,17 +180,18 @@ jobs:
     timeout-minutes: 45
     strategy:
       matrix:
-        working_directory: ['tests', 'packages/cloud_firestore/cloud_firestore/example']
+        working_directory:
+          ['tests', 'packages/cloud_firestore/cloud_firestore/example']
     steps:
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3
       - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c
         name: Install Node.js 16
         with:
-          node-version: "16"
+          node-version: '16'
       - uses: actions/setup-java@3f07048e3d294f56e9b90ac5ea2c6f74e9ad0f98
         with:
-          distribution: "temurin"
-          java-version: "11"
+          distribution: 'temurin'
+          java-version: '11'
       - uses: hendrikmuhs/ccache-action@fba817f3c0db4f854d7a3ee688241d6754da166e
         name: Xcode Compile Cache
         with:
@@ -215,12 +218,12 @@ jobs:
         with:
           run-bootstrap: false
           melos-version: '3.0.1'
-      - name: "Bootstrap package"
+      - name: 'Bootstrap package'
         run: melos bootstrap --scope tests
-      - name: "Install Tools"
+      - name: 'Install Tools'
         run: |
           sudo npm i -g firebase-tools
-      - name: "Build Application"
+      - name: 'Build Application'
         working-directory: ${{ matrix.working_directory }}
         run: |
           export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH"
@@ -233,7 +236,7 @@ jobs:
           ccache -s
       - name: Start Firebase Emulator
         run: cd ./.github/workflows/scripts && ./start-firebase-emulator.sh
-      - name: "E2E Tests"
+      - name: 'E2E Tests'
         working-directory: ${{ matrix.working_directory }}
         run: |
           flutter test \
@@ -246,17 +249,18 @@ jobs:
     timeout-minutes: 15
     strategy:
       matrix:
-        working_directory: ['tests', 'packages/cloud_firestore/cloud_firestore/example']
+        working_directory:
+          ['tests', 'packages/cloud_firestore/cloud_firestore/example']
     steps:
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3
       - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c
         name: Install Node.js 16
         with:
-          node-version: "16"
+          node-version: '16'
       - uses: actions/setup-java@3f07048e3d294f56e9b90ac5ea2c6f74e9ad0f98
         with:
-          distribution: "temurin"
-          java-version: "11"
+          distribution: 'temurin'
+          java-version: '11'
       - uses: subosito/flutter-action@dbf1fa04f4d2e52c33185153d06cdb5443aa189d
         with:
           channel: 'stable'
@@ -265,9 +269,9 @@ jobs:
         with:
           run-bootstrap: false
           melos-version: '3.0.1'
-      - name: "Bootstrap package"
+      - name: 'Bootstrap package'
         run: melos bootstrap --scope tests
-      - name: "Install Tools"
+      - name: 'Install Tools'
         run: |
           sudo npm i -g firebase-tools
       - name: Cache Firebase Emulator
@@ -278,7 +282,7 @@ jobs:
           restore-keys: firebase-emulators-v1
       - name: Start Firebase Emulator
         run: cd ./.github/workflows/scripts && ./start-firebase-emulator.sh
-      - name: "E2E Tests"
+      - name: 'E2E Tests'
         working-directory: ${{ matrix.working_directory }}
         # Web devices are not supported for the `flutter test` command yet. As a
         # workaround we can use the `flutter drive` command. Tracking issue:
