--- a/.github/workflows/firebase_firestore_odm.yaml
+++ b/.github/workflows/firebase_firestore_odm.yaml
@@ -7,19 +7,19 @@ concurrency:
 on:
   pull_request:
     paths:
-      - "packages/cloud_firestore/**"
-      - "packages/cloud_firestore_odm/**"
-      - ".github/workflows/firebase_firestore_odm.yaml"
+      - 'packages/cloud_firestore/**'
+      - 'packages/cloud_firestore_odm/**'
+      - '.github/workflows/firebase_firestore_odm.yaml'
   push:
     branches:
       - master
     paths-ignore:
-      - "docs/**"
-      - "**.md"
+      - 'docs/**'
+      - '**.md'
 
 env:
-  FLUTTERFIRE_PLUGIN_SCOPE: "*cloud_firestore*"
-  FLUTTERFIRE_PLUGIN_SCOPE_EXAMPLE: "*cloud_firestore_odm_example*"
+  FLUTTERFIRE_PLUGIN_SCOPE: '*cloud_firestore*'
+  FLUTTERFIRE_PLUGIN_SCOPE_EXAMPLE: '*cloud_firestore_odm_example*'
 
 jobs:
   test:
@@ -37,14 +37,14 @@ jobs:
         with:
           run-bootstrap: false
           melos-version: '3.0.1'
-      - name: "Bootstrap Workspace"
+      - name: 'Bootstrap Workspace'
         run: |
           melos bootstrap --scope="*firebase_core*" --scope="$FLUTTERFIRE_PLUGIN_SCOPE"
           melos run odm:example_build_runner:build
           melos run odm:generator_test_build_runner:build
-      - name: "Flutter Test"
+      - name: 'Flutter Test'
         run: melos run odm:test:flutter --no-select
-      - name: "Dart Test"
+      - name: 'Dart Test'
         run: melos run odm:test:dart --no-select
 
   integration_test:
@@ -57,7 +57,7 @@ jobs:
       - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c
         name: Install Node.js 16
         with:
-          node-version: "16"
+          node-version: '16'
       - uses: actions/setup-java@3f07048e3d294f56e9b90ac5ea2c6f74e9ad0f98
         with:
           distribution: 'temurin'
@@ -70,17 +70,17 @@ jobs:
         with:
           run-bootstrap: false
           melos-version: '3.0.1'
-      - name: "Install Tools"
+      - name: 'Install Tools'
         run: |
           sudo npm i -g firebase-tools
-      - name: "Bootstrap Workspace"
+      - name: 'Bootstrap Workspace'
         run: |
           melos bootstrap --scope="*firebase_core*" --scope="$FLUTTERFIRE_PLUGIN_SCOPE"
           melos run odm:example_build_runner:build
           melos run odm:generator_test_build_runner:build
       - name: Start Firebase Emulator
         run: cd ./.github/workflows/scripts && ./start-firebase-emulator.sh
-      - name: "E2E Tests"
+      - name: 'E2E Tests'
         working-directory: packages/cloud_firestore_odm/cloud_firestore_odm/example
         # Web devices are not supported for the `flutter test` command yet. As a
         # workaround we can use the `flutter drive` command. Tracking issue:
