--- a/packages/cloud_firestore/cloud_firestore/pubspec.yaml
+++ b/packages/cloud_firestore/cloud_firestore/pubspec.yaml
@@ -11,8 +11,8 @@ false_secrets:
   - dartpad/**
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.5"
+  sdk: '>=2.18.0 <3.0.0'
+  flutter: '>=1.12.13+hotfix.5'
 
 dependencies:
   cloud_firestore_platform_interface: ^5.12.1
@@ -22,7 +22,7 @@ dependencies:
   firebase_core_platform_interface: ^4.6.0
   flutter:
     sdk: flutter
-  meta: ^1.3.0
+  meta: ^1.8.0
 
 dev_dependencies:
   flutter_test:
