--- a/packages/firebase_app_check/firebase_app_check_web/pubspec.yaml
+++ b/packages/firebase_app_check/firebase_app_check_web/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   js: ^0.6.3
 
 dev_dependencies:
+  build_runner: ^2.3.3
   firebase_app_check: ^0.1.2+3
   firebase_core_platform_interface: ^4.6.0
   flutter_test:
