--- a/packages/cloud_firestore/cloud_firestore_platform_interface/pubspec.yaml
+++ b/packages/cloud_firestore/cloud_firestore_platform_interface/pubspec.yaml
@@ -5,8 +5,8 @@ homepage: https://github.com/firebase/flutterfire/tree/master/packages/cloud_fir
 repository: https://github.com/firebase/flutterfire/tree/master/packages/cloud_firestore/cloud_firestore_platform_interface
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
-  flutter: '>=1.9.1+hotfix.5'
+  sdk: '>=2.18.0 <4.0.0'
+  flutter: '>=3.3.0'
 
 dependencies:
   _flutterfire_internals: ^1.2.0
