--- a/packages/_flutterfire_internals/pubspec.yaml
+++ b/packages/_flutterfire_internals/pubspec.yaml
@@ -5,8 +5,8 @@ repository: https://github.com/firebase/flutterfire/tree/master/packages/_flutte
 version: 1.2.0
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
-  flutter: '>=1.12.13+hotfix.5'
+  sdk: '>=2.18.0 <4.0.0'
+  flutter: '>=3.3.0'
 
 dependencies:
   collection: ^1.0.0
