--- a/packages/cloud_firestore_odm/cloud_firestore_odm_generator/pubspec.yaml
+++ b/packages/cloud_firestore_odm/cloud_firestore_odm_generator/pubspec.yaml
@@ -8,19 +8,21 @@ environment:
   sdk: '>=2.18.0 <4.0.0'
 
 dependencies:
-  analyzer: '>=5.4.0 <6.0.0'
+  analyzer: '>=5.12.0 <6.0.0'
   build: ^2.0.1
   build_config: ^1.0.0
   cloud_firestore_odm: ^1.0.0-dev.58
   collection: ^1.15.0
   freezed_annotation: '>=1.0.0 <3.0.0'
-  json_annotation: ^4.6.0
+  # Can be removed once this is fixed https://github.com/dart-lang/graphs/issues/86
+  graphs: '>=2.0.0 <2.3.0'
+  json_annotation: ^4.8.1
   meta: ^1.8.0
   recase: ^4.0.0
-  source_gen: ^1.0.0
+  source_gen: ^1.3.2
 
 dev_dependencies:
-  build_runner: ^2.0.0
+  build_runner: ^2.4.2
   expect_error: ^1.0.5
   json_serializable: '>=6.3.0 <7.0.0'
   matcher: ^0.12.10
