--- a/packages/cloud_firestore_odm/cloud_firestore_odm/example/pubspec.yaml
+++ b/packages/cloud_firestore_odm/cloud_firestore_odm/example/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.2
   cloud_firestore_odm_generator: ^1.0.0-dev.59
-  cloud_firestore_odm_generator_integration_test: any
+  cloud_firestore_odm_generator_integration_test:
+    path: ../../cloud_firestore_odm_generator/cloud_firestore_odm_generator_integration_test
   flutter_test:
     sdk: flutter
   freezed: ^2.3.2
