chore: fixed incorrect description of the format command. (#10651)
* Fix for incorrect description for the format command in melos.yaml file

* Added name and contact info in the Authors File

---------

Co-authored-by: Russell Wheatley <russellwheatley85@gmail.com>

--- a/melos.yaml
+++ b/melos.yaml
@@ -58,9 +58,10 @@ scripts:
       dart pub global run flutter_plugin_tools format && \
       swiftformat .
     description: |
-      Build a specific example app for Android.
-       - Requires `flutter_plugin_tools` (`dart pub global activate flutter_plugin_tools`).
-       - Requires `clang-format` (can be installed via Brew on macOS).
+      Formats the code of all packages (Java, Objective-C, and Dart).
+       - Requires `flutter_plugin_tools` (`pub global activate flutter_plugin_tools`).
+       - Requires `git`.
+       - Requires `clang-format` (can be installed via Brew on MacOS).
        - Requires `swiftformat` (can be installed via Brew on macOS).
 
   build:all:
