feat(auth): move to Pigeon for Platform channels (#10802)
* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels END Auth

* feat(auth): move to Pigeon for Platform channels START user

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat: start objc

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios done

* feat: ios done

* remove test code from demo

* fix codes

* fix codes

* fix codes

* feat: update web

* feat: update tests

* fix tests

* add licence

* fix analyze

* fix analyze

* fix pod

--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -26,7 +26,7 @@ on:
 
 jobs:
   android:
-    runs-on: macos-13
+    runs-on: macos-13-xl
     timeout-minutes: 45
     strategy:
       matrix:
@@ -171,9 +171,6 @@ jobs:
           # Uncomment following line to have simulator logs printed out for debugging purposes.
           # xcrun simctl spawn booted log stream --predicate 'eventMessage contains "flutter"' &
           flutter test integration_test/e2e_test.dart -d "$SIMULATOR" --dart-define=CI=true
-          FLUTTER_DRIVE_EXIT_CODE=$?
-          xcrun simctl shutdown "$SIMULATOR"
-          exit $FLUTTER_DRIVE_EXIT_CODE
 
   macos:
     runs-on: macos-13
@@ -288,7 +285,7 @@ jobs:
         # workaround we can use the `flutter drive` command. Tracking issue:
         # https://github.com/flutter/flutter/issues/66264
         run: |
-          chromedriver --port=4444 &
+          chromedriver --port=4444 --trace-buffer-size=100000 &
           flutter drive \
             --verbose-system-logs \
             -d web-server \
