--- a/packages/firebase_auth/firebase_auth/pubspec.yaml
+++ b/packages/firebase_auth/firebase_auth/pubspec.yaml
@@ -1,5 +1,5 @@
 name: firebase_auth
-description: Flutter plugin for Firebase Auth, enabling Android and iOS
+description: Flutter plugin for Firebase Auth, enabling
   authentication using passwords, phone numbers and identity providers
   like Google, Facebook and Twitter.
 homepage: https://firebase.google.com/docs/auth
