feat(auth, windows): add Windows support to auth plugin (#11089)
* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels END Auth

* feat(auth): move to Pigeon for Platform channels START user

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat(auth): move to Pigeon for Platform channels

* feat: start objc

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios

* feat: ios done

* feat: ios done

* remove test code from demo

* fix codes

* fix codes

* fix codes

* feat: update web

* feat: update tests

* fix tests

* add licence

* fix analyze

* fix analyze

* 

--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -299,6 +299,10 @@ jobs:
     timeout-minutes: 45
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9
+      - uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2
+        with:
+          distribution: 'temurin'
+          java-version: '11'
       - uses: actions/setup-node@e33196f7422957bea03ed53f6fbb155025ffc7b8
         name: Install Node.js 16
         with:
@@ -316,9 +320,5 @@ jobs:
       - name: "Install Tools"
         run: |
           npm install -g firebase-tools
-      - name: Start Firebase Emulator
-        run: cd ./.github/workflows/scripts && ./start-firebase-emulator.sh
-      - name: "E2E Tests"
-        working-directory: tests
-        run: |
-          flutter test .\integration_test\e2e_test.dart -d windows
+      - name: Start Firebase Emulator and run tests
+        run: cd ./.github/workflows/scripts && firebase emulators:exec --project flutterfire-e2e-tests "cd ../../../tests && flutter test .\integration_test\e2e_test.dart -d windows"
