--- a/packages/firebase_auth/firebase_auth/pubspec.yaml
+++ b/packages/firebase_auth/firebase_auth/pubspec.yaml
@@ -41,3 +41,6 @@ flutter:
         pluginClass: FLTFirebaseAuthPlugin
       web:
         default_package: firebase_auth_web
+      windows:
+        pluginClass: FirebaseAuthPluginCApi
+
